# backend/docs/swagger.json
@@ -388,6 +388,78 @@
                     }
                 }
             }
+        },
+        "/api/subtask": {
+            "post": {
+                "description": "Edit existing Subtask by ID or add new Subtask (if ID=0)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "subtask"
+                ],
+                "summary": "Edit or add Card Subtask",
+                "parameters": [
+                    {
+                        "description": "Subtask",
+                        "name": "subtask",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Subtask"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "boolean"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
+        "/api/subtask/del/{id}": {
+            "get": {
+                "description": "Delete Card Subtask by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "subtask"
+                ],
+                "summary": "Delete Card Subtask by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Subtask ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "boolean"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -439,6 +511,12 @@
                 },
                 "Sort": {
                     "type": "integer"
+                },
+                "Tasks": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Subtask"
+                    }
                 },
                 "Theme": {
                     "type": "string"
@@ -513,6 +591,23 @@
                     "type": "string"
                 },
                 "Port": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Subtask": {
+            "type": "object",
+            "properties": {
+                "Checked": {
+                    "type": "boolean"
+                },
+                "ColumnID": {
+                    "type": "integer"
+                },
+                "ID": {
+                    "type": "integer"
+                },
+                "Task": {
                     "type": "string"
                 }
             }
